tests/baselines/reference/classWithPublicProperty(strict=true).errors.txt
classWithPublicProperty.ts(2,12): error TS7008: Member 'x' implicitly has an 'any' type.
classWithPublicProperty.ts(7,19): error TS7008: Member 'e' implicitly has an 'any' type.


==== classWithPublicProperty.ts (2 errors) ====
    class C {
        public x;
               ~
!!! error TS7008: Member 'x' implicitly has an 'any' type.
        public a = '';
        public b: string = '';
        public c() { return '' }
        public d = () => '';
        public static e;
                      ~
!!! error TS7008: Member 'e' implicitly has an 'any' type.
        public static f() { return '' }
        public static g = () => '';
    }
    
    // all of these are valid
    var c = new C();
    var r1: string = c.x;
    var r2: string = c.a;
    var r3: string = c.b;
    var r4: string = c.c();
    var r5: string = c.d();
    var r6: string = C.e;
    var r7: string = C.f();
    var r8: string = C.g();